force-app/main/default/objects/Forecast_Period__c/Forecast_Period__c.object-meta.xml
<CustomObject>
    <description>One forecast period. Auto-generated from fiscal calendar.</description>
    <label>Forecast Period</label>
    <nameField><label>Forecast Period Name</label><type>Text</type></nameField>
    <pluralLabel>Forecast Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>