force-app/main/default/objects/Forecast_Period__c/fields/Budget_Mode__c.field-meta.xml
<CustomField>
    <fullName>Budget_Mode__c</fullName>
    <label>Budget Mode</label>
    <description>Budget Mode</description>
    <inlineHelpText>Budget Mode</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>