force-app/main/default/objects/Forecast_Period__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <description>Fiscal Year</description>
    <inlineHelpText>Fiscal Year</inlineHelpText>
    <type>Text</type>
    <length>10</length>
</CustomField>