force-app/main/default/objects/Forecast_Period__c/fields/Forecast_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Configuration__c</fullName>
    <label>Forecast Configuration</label>
    <description>Forecast Configuration</description>
    <inlineHelpText>Forecast Configuration</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Forecast_Configuration__c</referenceTo>
    <relationshipLabel>Forecast Periods</relationshipLabel>
    <relationshipName>Forecast_Periods</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>