force-app/main/default/objects/Forecast_Period__c/fields/Frozen_By__c.field-meta.xml
<CustomField>
    <fullName>Frozen_By__c</fullName>
    <label>Frozen By</label>
    <description>Frozen By</description>
    <inlineHelpText>Frozen By</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Frozen Forecast Periods</relationshipLabel>
    <relationshipName>Frozen_Forecast_Periods</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>