force-app/main/default/objects/Forecast_Period__c/fields/Frozen_On__c.field-meta.xml
<CustomField>
    <fullName>Frozen_On__c</fullName>
    <label>Frozen On</label>
    <description>Frozen On</description>
    <inlineHelpText>Frozen On</inlineHelpText>
    <type>DateTime</type>
</CustomField>