force-app/main/default/objects/Forecast_Period__c/fields/Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Notification_Sent__c</fullName>
    <label>Notification Sent</label>
    <description>Notification Sent</description>
    <inlineHelpText>Notification Sent</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>