force-app/main/default/objects/Forecast_Period__c/fields/Opened_On__c.field-meta.xml
<CustomField>
    <fullName>Opened_On__c</fullName>
    <label>Opened On</label>
    <description>Opened On</description>
    <inlineHelpText>Opened On</inlineHelpText>
    <type>DateTime</type>
</CustomField>