force-app/main/default/objects/Forecast_Period__c/fields/Period_Label__c.field-meta.xml
<CustomField>
    <fullName>Period_Label__c</fullName>
    <label>Period Label</label>
    <description>Auto-generated, e.g. Q2 FY2027</description>
    <inlineHelpText>Auto-generated, e.g. Q2 FY2027</inlineHelpText>
    <type>Text</type>
    <length>50</length>
</CustomField>