force-app/main/default/objects/Forecast_Period__c/fields/Prelock_Date__c.field-meta.xml
<CustomField>
    <fullName>Prelock_Date__c</fullName>
    <label>Prelock Date</label>
    <description>Auto-calculated: End_Date - Prelock_Days</description>
    <inlineHelpText>Auto-calculated: End_Date - Prelock_Days</inlineHelpText>
    <type>Date</type>
</CustomField>