force-app/main/default/objects/Forecast_Period__c/fields/Prelock_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Prelock_Notification_Sent__c</fullName>
    <label>Prelock Notification Sent</label>
    <description>Prelock Notification Sent</description>
    <inlineHelpText>Prelock Notification Sent</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>