force-app/main/default/objects/Forecast_Period__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <description>Start Date</description>
    <inlineHelpText>Start Date</inlineHelpText>
    <type>Date</type>
    <required>true</required>
</CustomField>