force-app/main/default/objects/Forecast_Period__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Status</description>
    <inlineHelpText>Status</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Scheduled</fullName><default>false</default><label>Scheduled</label></value>
            <value><fullName>Open</fullName><default>false</default><label>Open</label></value>
            <value><fullName>Prelock</fullName><default>false</default><label>Prelock</label></value>
            <value><fullName>Frozen</fullName><default>false</default><label>Frozen</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>